# pmarlo

./: .coverage  .gitignore  .pre-commit-config.yaml  .testmondata  .testmondata-shm  .testmondata-wal  AGENTS.md  BENCHMARK_SUITE_SUMMARY.md  CHANGELOG.md  CLI_COMPLETE.md  CONFORMATIONS_APP_INTEGRATION.md  CONFORMATIONS_FIXES.md  CONFORMATIONS_TPT_NO_FALLBACKS.md  CONSOLE_OUTPUT_FIX.md  CONTRIBUTING.md  DEEPTICA_PERFORMANCE_STATUS.md  Dockerfile  EXAMPLE_CONSOLE_OUTPUT.txt  FINAL_FIX_SUMMARY.md  LOGGING_FIX_SUMMARY.md  MANIFEST.in  PERFORMANCE_FIX_SUMMARY.md  README.md  README_BENCHMARKS.md  SIMULATION_LOGGING_EXPLANATION.md  TICA_INVESTIGATION_SUMMARY.md  USAGE.md  benchmark.prof  benchmark_results.json  changes.patch  check_bundle.py  commands.md  concept.md  conformations_cli.py  debug_state_paths.py  diagnose_openmm_torch.py  import_test.py  pmarlo_python_tree.txt  pyproject.toml  requirements-dev.txt  (+32 more)
.github/workflows/: publish.yml  tests.yml
.pytest-tmp/test_ck_insufficient_overlay0/: ck_mse.csv  ck_mse.json
.pytest-tmp/test_ck_mse_decreases_and_plot0/: ck_mse.csv  ck_mse.json
.pytest-tmp/test_ck_tau_selection0/: ck_mse.csv
.pytest-tmp/test_load_json_file_annotates_0/: invalid.json
.pytest-tmp/test_load_json_file_reads_payl0/: trajectory_meta.json
.pytest-tmp/test_result_roundtrip0/: analysis_results.json  analysis_results.pkl
changelog.d/: 20240413-array-utils.md  20240509-discretization-logging.md  20240606-demux-fail-fast.md  20240703_deeptime_pipeline.rst  20240704_app_debug_logging.md  20240707_telemetry_lint_refactors.md  20240711-fix-its-import.md  20240808_samplers_marker.md  20241004_codex_deeptica_pipeline.md  20241009_ensure_mdtraj_optional.md  20241113_203500_dbscan.md  2025-10-17-remove-statsmodels.md  20250107-standardize-app-shards.md  20250118_deeptime_msm.md  20250118_resolve_merge_conflicts.md  20250120_analysis_debug_logging.md  20250206-emoji-cleanup.md  20250208-fix-simulation.md  20250209-save-restart-pdb.md  20250214_lint_cleanup.md  20250216_140000_recluster_tests.md  20250217-training-metrics.md  20250217_120000_demux_dataset_refactor.md  20250218-fix-transition-counting.md  20250218_000000_io_complexity_refactor.md  20250221_120000_guardrail_validator.md  20250301-deeptica-variance.md  20250303-vectorized-minima.md  20250305-analysis-guardrail.md  20250305_codex_sampler_pairs_unify.md  20250308-fes-typing.md  20250308_fix_missing_bias_loading.md  20250309_deeptica_whitening.md  20250309_deeptime_clustering.md  20250311-demux-safe-float.md  20250318-demux-reader-whitening.md  20250319-scaled-pair-fix.md  20250321-demux-missing-trajectories.md  20250321-demux-missing-trajectory.md  20250321_simplify_tpt_classification.md  (+148 more)
deploy/k8s/: job-algo-tests.yaml  pod-copy-helper.yaml  pvc-experiments.yaml
diagnostics/: shard_validation_report.md
docker/: Dockerfile  entrypoint.sh
docs/: SINGLE_TEMP_STRATEGY.md
example_programs/: 01_verify_pmarlo.py  02_pipeline_api.py  03_remd_sampling.py  04_single_temperature_sampling.py  05_shards_to_build.py  06_reproducible_build.py  07_free_energy_landscape.py  08_conformations_msm.py  09_conformations_tpt.py  10_tpt_basic.py  11_tpt_drunkards_walk.py  12_openmm_bias_benchmark.py  13_adaptive_retraining_colab.ipynb  14_muller_brown_active_bias.py  14_muller_brown_active_bias_colab.ipynb  15_plumed_pesmd_validation_colab.ipynb  __init__.py  _example_support.py  all_capabilities_demo.py  bench_openmm.py  benchmark_remd_performance.py  compare_dcd_writers.py  compare_debug_bundles.py  conformations_dbscan_full_dataset.py  demo_pipeline.py  diagnose_dcd_corruption.py  find_conformations_tpt.py  find_conformations_tpt_real.py  find_conformations_with_msm.py  free_energy_landscape.py  free_energy_landscape_long.py  poprawki.md  quick_remd_demo.py  reproducible_build.py  run_shards_then_build.py  single_temp_strategy.py  test_fixed_dcd.py  tpt_analysis_example.py  tpt_drunkards_walk.py  verify_pmarlo.py
example_programs/app_usecase/: COMPLETE_FIX_SUMMARY.md  README_FIXES.md
examples/: advanced_usage.py  basic_usage.py  checkpoint_usage.py  proper_usage_example.py  simple_usage.py  test_local.py
mdfiles/: cv_biasing_performance_issue.md  cv_integration_sampling.md  deeptica.md  fallback_removing.md
pmarlo_output/39870/: config.json  life.json
pmarlo_output/52447/: config.json  life.json  state.pkl
pmarlo_output/replica_exchange/: remd_results.pkl
pmarlo_webapp/: RERUN_FIX_SUMMARY.md  TABS_FIX_SUMMARY.md  export_cv_bundle.py
pmarlo_webapp/app/: AGENTS.md  app.py  backend.py  conformations_cli.py  headless.py  pmarlo_webapp.md  state.py
scripts/: bench_openmm.py  check_extras_parity.py  compare_debug_bundles.py  diagnose_cvs.py  instruction.md
scripts/unix/: CHANGES.md  FINAL_FIX_SUMMARY.md  (+4 more)
src/: main.py  pipeline.py  replica_exchange.py
test_output/: test_bundle.json
tests/: AGENTS.md  __init__.py  conftest.py  test_bootstrap_counts.py  test_ck.py  test_ck_fallback.py  test_ck_tau_selection.py  test_cluster_micro.py  test_compute_macrostate_memberships.py  test_experiments_seed.py  test_feature_extraction_seed.py  test_features.py  test_fes.py  test_fes_pair_selection.py  test_fes_periodic.py  test_fes_result_api.py  test_fes_smoothing.py  test_find_metastable_states.py  test_frame_accounting.py  test_global_seed.py  test_implied_timescales.py  test_integration.py  test_iterload_stream.py  test_ladder_retuning.py  test_msm_iterload.py  test_pipeline.py  test_protein.py  test_ramachandran.py  test_ramachandran_wiring.py  test_replica_exchange_comprehensive.py  test_seed_reproducibility.py  test_simulation.py  test_temperature_ladder.py  test_trig_expand_mapping.py  test_visualization_diagnostics.py
tmp/: temps.json
tmp_models/: deeptica-20250921-200605.history.csv  deeptica-20250921-200605.history.json  deeptica-20250921-200605.json  deeptica-20250921-200605.pt  deeptica-20250921-200605.scaler.pt
tmp_shards/: T300K_shard_extraction_seg0000_rep000.json  T300K_shard_extraction_seg0000_rep000.npz
tools/: check_extras_parity.py  lines_report.py  structure.py
utilities/: lines.py
(+805 files in other folders)
