[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pmarlo"
description = "Protein Markov State Model Analysis with Replica Exchange"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "PMARLO Development Team", email = "pmarlo@example.com"},
]
keywords = ["molecular dynamics", "markov state models", "replica exchange", "protein simulation", "biophysics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

dependencies = [
    "numpy>=1.24.0,<2.3.0",  # Compatible with numba and mordred
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "mdtraj>=1.9.0",
    "openmm>=8.0.0",
    "rdkit>=2024.03.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
]
fixer = [
    "pdbfixer @ git+https://github.com/openmm/pdbfixer@v1.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/pmarlo"
Documentation = "https://pmarlo.readthedocs.io/"
Repository = "https://github.com/yourusername/pmarlo"
Issues = "https://github.com/yourusername/pmarlo/issues"

[project.scripts]
pmarlo = "pmarlo.main:main"

[tool.setuptools_scm]
write_to = "src/pmarlo/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["pmarlo"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true